--- a/client-side/package.json
+++ b/client-side/package.json
@@ -13,16 +13,20 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.12",
+    "@tanstack/react-query": "^5.28.0",
     "axios": "^1.6.7",
     "firebase": "^10.8.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.4",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8",
-    "sweetalert2": "^11.10.6"
+    "sweetalert2": "^11.10.6",
+    "yup-phone": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
